<resources>
    <string name="Message_details">通知栏显示消息详情</string>
    <string name="Receive_push_notifications">接收推送通知</string>
    <string name="_2240946193_qq_com">电子邮件：2240946193@qq.com</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="academic_trend">学术动态</string>
    <string name="account">账号</string>
    <string name="account_management">账号管理</string>
    <string name="affiliated_department">所属学院</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">My Application</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_to_join">申请加入</string>
    <string name="base_func">基础功能</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="commit">提交</string>
    <string name="confirm_modify">确认修改</string>
    <string name="crash_flashback">崩溃闪退</string>
    <string name="create_user">创建用户</string>
    <string name="create_virtual_teachResearch_section">创建虚拟教研室</string>
    <string name="display_abnormalities">显示异常</string>
    <string name="download_address">客户端下载地址：http://www.downloadapp.com</string>
    <string name="edit_personalInfo">编辑个人信息</string>
    <string name="edit_personal_sign">修改个人签名</string>
    <string name="edit_telephone_num">编辑电话号码</string>
    <string name="else_problem">其他</string>
    <string name="entry_into_force_time">生效时间:2024-03-27</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_logIn">退出登录</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="finish_modify">完成修改</string>
    <string name="forget">忘记密码</string>
    <string name="forget_2">忘记密码?</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_new_pwd_confirm">请再次输入新密码</string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_verify">请再次输入密码</string>
    <string name="input_section_name">请输入教研室名字</string>
    <string name="input_section_num">请输入教研室编号</string>
    <string name="input_teacher_num">请输入教职工号</string>
    <string name="input_telephone_num">请输入电话号码</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="item_view_role_description">Tab</string>
    <string name="join">参加</string>
    <string name="join_teachResearch_section">申请加入教研室</string>
    <string name="join_virtual_teachResearch_section">加入虚拟教研室</string>
    <string name="local_version">本机版本</string>
    <string name="local_version_1">本机版本：1.0.1</string>
    <string name="login">登录</string>
    <string name="login_or_register">登录/注册</string>
    <string name="m3_ref_typeface_brand_display_regular">sans-serif</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_typescale_body_large_font">sans-serif</string>
    <string name="m3_sys_typescale_body_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_body_small_font">sans-serif</string>
    <string name="m3_sys_typescale_display_large_font">sans-serif</string>
    <string name="m3_sys_typescale_display_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_display_small_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_large_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_small_font">sans-serif</string>
    <string name="m3_sys_typescale_label_large_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_small_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_large_font">sans-serif</string>
    <string name="m3_sys_typescale_title_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_small_font">sans-serif-medium</string>
    <string name="mail">收件箱</string>
    <string name="main_page">首页</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="meeting">会议</string>
    <string name="meeting_num">会议号</string>
    <string name="meeting_reminder">会议提醒</string>
    <string name="meeting_topic">会议主题</string>
    <string name="message_reminder">消息提醒</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="name">姓名</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_confirm">确认新密码</string>
    <string name="next_step">下一步</string>
    <string name="nick_name">用户昵称(用户名为教职工号)</string>
    <string name="password">密码</string>
    <string name="password_verify">密码确认</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="privacy_policy_1">本隐私政策旨在说明我们如何收集、使用、处理和保护您的个人信息。请仔细阅读本隐私政策，以了解我们对您个人信息的处理方式。如果您对本隐私政策有任何疑问，请通过我们的联系方式与我们联系。</string>
    <string name="privacy_policy_10">联系我们：</string>
    <string name="privacy_policy_11">如果您对我们的隐私政策有任何疑问或意见，请通过以下方式与我们联系：</string>
    <string name="privacy_policy_2">收集的信息类型：</string>
    <string name="privacy_policy_3">我们可能收集的个人信息类型包括但不限于：姓名、电子邮件地址、联系方式等信息。</string>
    <string name="privacy_policy_4">信息收集方式：</string>
    <string name="privacy_policy_5">您主动提供的信息，例如填写表格或向我们发送电子邮件时提供的信息； 自动收集的信息，例如使用Cookie技术收集的信息，详情请参阅我们的Cookie政策。</string>
    <string name="privacy_policy_6">信息使用：</string>
    <string name="privacy_policy_7">我们可能使用您的个人信息来：向您提供我们的产品或服务；处理您的请求；向您发送营销信息或通知。</string>
    <string name="privacy_policy_8">信息共享：</string>
    <string name="privacy_policy_9">我们可能与第三方共享您的个人信息，但我们将尽力确保这些第三方遵守适用的隐私法律和规定。</string>
    <string name="reset_Pwd">重置密码</string>
    <string name="section_name">教研室名字</string>
    <string name="teachResearch_course">教研课程</string>
    <string name="teachResearch_section_num">教研室编号</string>
    <string name="teacher_num">教职工号</string>
    <string name="telephone_num">电话号码</string>
    <string name="user_name">用户名(教职工号)</string>
    <string name="verify_code">验证码</string>
    <string name="verify_identity">验证身份信息</string>
</resources>