<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="#ece8e8" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="30sp" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="45sp" android:layout_marginBottom="35sp" android:text="@string/join_virtual_teachResearch_section" android:layout_marginStart="40sp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teacher_num" android:layout_marginStart="45sp"/>
        <EditText android:id="@+id/join_teacher_num" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40sp" android:layout_marginRight="40sp" android:layout_marginBottom="12.5sp" android:minHeight="48dp" android:hint="@string/input_teacher_num" android:maxLength="10" android:inputType="text"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:layout_marginStart="45sp"/>
        <EditText android:id="@+id/join_teacher_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.5sp" android:minHeight="48dp" android:hint="@string/input_name" android:maxLength="10" android:inputType="text" android:layout_marginStart="40sp" android:layout_marginEnd="40sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teachResearch_section_num" android:layout_marginStart="45sp"/>
        <EditText android:id="@+id/join_section_num" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.5sp" android:minHeight="48dp" android:hint="@string/input_section_num" android:maxLength="6" android:inputType="number" android:layout_marginStart="40sp" android:layout_marginEnd="40sp"/>
        <Button android:textSize="20sp" android:textColor="@color/white" android:background="#578bf3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30sp" android:text="@string/apply_to_join" android:onClick="apply_to_join" android:layout_marginStart="40sp" android:layout_marginEnd="40sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
